# scrape-taobao

./: .gitignore  README.md  pyproject.toml  stealth.min.js
scrape_taobao/: __main__.py  dumps.py  io.py  utils.py
scrape_taobao/bean/: item_data.py
scrape_taobao/commands/: __init__.py  filtor.py  parse.py  parse_one.py  scrape.py  scrape_one.py
scrape_taobao/core/: fetch_item_page.py  hack.py  parse_item_page.py
