[tool.poetry]
name = "scrape-taobao"
version = "0.1.0"
description = ""
authors = ["limoiie <limo.iie4@gmail.com>"]
readme = "README.md"
packages = [{ include = "scrape_taobao" }]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
dacite = "^1.8.1"
fire = "^0.5.0"
python = "^3.8"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
rich = "^13.4.1"
selenium = "^4.9.1"

[tool.black]
line-length = 80
target-version = ["py38"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
